--- a/assets/font/icons/dm-icons/style.css
+++ b/assets/font/icons/dm-icons/style.css
@@ -1,33 +1,40 @@
 @font-face {
-  font-family: 'dm-icons';
-  src:  url('fonts/dm-icons.eot?pgeroh');
-  src:  url('fonts/dm-icons.eot?pgeroh#iefix') format('embedded-opentype'),
-    url('fonts/dm-icons.ttf?pgeroh') format('truetype'),
-    url('fonts/dm-icons.woff?pgeroh') format('woff'),
-    url('fonts/dm-icons.svg?pgeroh#dm-icons') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+	font-family: "dm-icons";
+	src: url("fonts/icomoon.eot?t644k9");
+	src: url("fonts/icomoon.eot?t644k9#iefix") format("embedded-opentype"),
+		url("fonts/icomoon.ttf?t644k9") format("truetype"),
+		url("fonts/icomoon.woff?t644k9") format("woff"),
+		url("fonts/icomoon.svg?t644k9#icomoon") format("svg");
+	font-weight: normal;
+	font-style: normal;
+	font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'dm-icons' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
+[class^="icon-"],
+[class*=" icon-"] {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: "dm-icons" !important;
+	speak: never;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-skull:before {
-  content: "\73";
-}
 .icon-coin:before {
-  content: "\63";
+	content: "\63";
+}
+.icon-down:before {
+	content: "\76";
+}
+.icon-skull:before {
+	content: "\78";
+}
+.icon-up:before {
+	content: "\5e";
 }
